<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <com.sun.dev.widget.SpiderWebView
        android:id="@+id/cob_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/welcome_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/welcome_tip"
        android:textColor="@color/color_4278ff"
        android:textSize="@dimen/sp_11" />


    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/color_4278ff"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_20"
        android:text="@string/skip"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>