<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@android:color/white"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_info_name"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13"
            tools:text="xxx" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_view_line_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@android:color/white"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13"
            tools:text="130****4568" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_view_line_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@android:color/white"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ID_number"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_13"
            tools:text="**** **** **** ****" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_view_line_bg" />
    </RelativeLayout>

    <com.sun.dev.util.VerCodeInputView
        android:id="@+id/input_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10" />
</LinearLayout>